# comfy-meta

./: .gitignore  README.md  build_exe.ps1  pyproject.toml
extractor/: __init__.py  batch.py  cli.py  comfy_parser.py  core.py  models.py  report_html.py  serialization.py
